# nonebot-plugin-arcaeabot

./: .gitignore  CHANGELOG.MD  README.md  pyproject.toml  version.json
message/image_message/: __init__.py  utils.py
message/image_message/single_song/: andreal_style_v3.py  arcaea_style_v2.py
nonebot-plugin-arcaea/: __init__.py  assets.py  data.py  draw_image.py  request.py
nonebot_plugin_ArcaeaQuery/: assets_updater.py  matcher.py
nonebot_plugin_ArcaeaQuery/assets/char/: SPACE.MD
nonebot_plugin_ArcaeaQuery/assets/song/: SPACE.MD
nonebot_plugin_ArcaeaQuery/handlers/: b30.py  bind.py
nonebot_plugin_arcaea/: __init__.py  assets_updater.py  draw_image.py  main.py
nonebot_plugin_arcaea/handlers/: __init__.py  assets_update.py  bind.py  help.py  info.py  pre.py  recent.py  unbind.py
nonebot_plugin_arcaeabot/: _RHelper.py  __init__.py  assets.py  assets_updater.py  config.py  config_pre_handler.py  data.py  database.py  draw_image.py  draw_text.py  get_char_point.py  main.py  matcher.py  request.py  resource_guider.py  resource_manager.py
nonebot_plugin_arcaeabot/AUA/: __init__.py  request.py
nonebot_plugin_arcaeabot/AUA/schema/: __init__.py  basemodel.py
nonebot_plugin_arcaeabot/adapters/: utils.py
nonebot_plugin_arcaeabot/adapters/aua/: api.py  draw_image.py  resolver.py
nonebot_plugin_arcaeabot/adapters/estertion/: api.py  draw_image.py  resolver.py
nonebot_plugin_arcaeabot/api/: __init__.py  request.py
nonebot_plugin_arcaeabot/assets/: constants.json  slst.json
nonebot_plugin_arcaeabot/database/: __init__.py  arcsong.db  song_alias.py  user_data.db
nonebot_plugin_arcaeabot/handler/: __init__.py  ai.py  assets_update.py  b30.py  best.py  bind.py  calc.py  default.py  defualt.py  help.py  info.py  pre.py  preview.py  ptt.py  random.py  recent.py  song.py  ui.py
nonebot_plugin_arcaeabot/handlers/: __init__.py  assets_update.py  b30.py  best.py  bind.py  help.py  info.py  pre.py  random.py  recent.py  song.py  unbind.py
nonebot_plugin_arcaeabot/image_generator/: __init__.py  assets.py  b30_image.py  best_image.py  recent_image.py  utils.py
nonebot_plugin_arcaeabot/message/: __init__.py
nonebot_plugin_arcaeabot/resource/: RandomTemplate.json
nonebot_plugin_arcaeabot/schema/: __init__.py
resource/: RandomTemplate.json
(+29 files in other folders)
