[tool.poetry]
name = "nonebot-plugin-arcaeabot"
version = "0.1.0"
description = ""
authors = ["SEAFHMC <d1366160279@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = ">=2.0.0-beta.1, <=2.0.0-beta.3"
nonebot-adapter-onebot = ">=2.0.0-beta.1, <=2.1.0"
peewee = ">=3.14.4"
httpx = ">=0.20.0, <1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
