[tool.poetry]
name = "nonebot_plugin_arcaeabot"
version = "3.1.8"
description = "An arcaea plugin for nonebot2. ( A cross platform Python async bot framework. )"
authors = ["SEAFHMC <soku_ritsuki@outlook.com>"]
license = "AGPL-3.0 License"
readme = "README.md"
homepage = "https://github.com/SEAFHMC/nonebot-plugin-arcaeabot"
repository = "https://github.com/SEAFHMC/nonebot-plugin-arcaeabot"
documentation = "https://github.com/SEAFHMC/nonebot-plugin-arcaeabot/blob/v3.0.0/README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.1.1"
Pillow = ">=9.3.0"
peewee = ">=3.14.4"
httpx = ">=0.20.0, <1.0.0"
tqdm = "^4.1.0"
"ruamel.yaml" = "^0.17.2"
ujson = "^5.5.0"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
